fixed overflow scrolling

--- a/src/App.scss
+++ b/src/App.scss
@@ -101,7 +101,7 @@ a {
   margin-left: 4.5rem;
   width: 100% !important;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
 }
 
 // Class-level
